# Marcai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  annotated.html  audio.h  audio_8h_source.html  cgi_8h_source.html  classAudio-members.html  classAudio.html  classImage-members.html  classImage.html  classScreen-members.html  classScreen.html  classSerial-members.html  classSerial.html  classState-members.html  classState.html  classWifi-members.html  classWifi.html  classWifi__Config-members.html  classWifi__Config.html  classWrite__Flash-members.html  classWrite__Flash.html  classes.html  classhttp_1_1request-members.html  classhttp_1_1request.html  classmedia__manager-members.html  classmedia__manager.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  htmldata.c  http__request_8h_source.html  http_client.cpp  image_8h_source.html  index.html  (+18 more)
.github/workflows/: doxygen.yml
docs/: Doxyfile  doxygen.conf
html_files/: index.shtml
include/: audio.h  cgi.h  http_client.h  http_request.h  http_server.h  image.h  lwipopts.h  mbedtls_config.h  media_manager.h  screen.h  serial.h  state.h  wifi.h  wifi_config.h  write_flash.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+1 more)
src/: README.md  audio.cpp  cgi.cpp  http_client.cpp  http_request.cpp  http_server.cpp  image.cpp  marcai.cpp  media_manager.cpp  screen.cpp  serial.cpp  wifi.cpp  wifi_config.cpp  write_flash.cpp
test/: README.md
